fixed collection creation firefox

--- a/app/assets/stylesheets/collections.scss
+++ b/app/assets/stylesheets/collections.scss
@@ -14,7 +14,7 @@
 .collection-creator-container {
   display: flex;
   flex-direction: column;
-  margin-top: 10%;
+  margin-top: 30px;
 }
 
 .collection-form {
